Added markdown for the objectives for the project

--- a/PythonNumberPlateRecognisation.ipynb
+++ b/PythonNumberPlateRecognisation.ipynb
@@ -1,12 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1173d73a",
+   "metadata": {},
+   "source": [
+    "1.Import dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e387aeb6",
+   "id": "f30534d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n"
+   ]
   }
  ],
  "metadata": {
