--- a/PythonNumberPlateRecognisation.ipynb
+++ b/PythonNumberPlateRecognisation.ipynb
@@ -6,23 +6,58 @@
    "id": "1173d73a",
    "metadata": {},
    "source": [
-    "1.Import dependencies"
+    "1.Install and import Dependencies"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f30534d8",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1a628684",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "2.Read in Image, Grayscale and Blue"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "79a34c4b",
+   "metadata": {},
+   "source": [
+    "3.Apply filter and find edges for localisation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8592446",
+   "metadata": {},
+   "source": [
+    "4.Finding contours and apply masks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a0481920",
+   "metadata": {},
+   "source": [
+    "5.Use EasyOCR to Read Text"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f00fc497",
+   "metadata": {},
+   "source": [
+    "6.Render the result"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -36,7 +71,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
