--- a/PythonANPR.ipynb
+++ b/PythonANPR.ipynb
@@ -106,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4aa33144",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa7827c6640>"
+       "<matplotlib.image.AxesImage at 0x7f21c2790640>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8330d903",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa78271e5e0>"
+       "<matplotlib.image.AxesImage at 0x7f21c26e0fd0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,6 +176,68 @@
     "bfilter = cv2.bilateralFilter(gray, 11, 17, 17)\n",
     "edged = cv2.Canny(bfilter, 30, 200)\n",
     "plt.imshow(cv2.cvtColor(edged, cv2.COLOR_BGR2RGB))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4581dbaa",
+   "metadata": {},
+   "source": [
+    "5.Find contours and apply mask "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39754e33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keypoints = cv2.findContours(edged.copy(), cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "contours = imutils.grab_contours(keypoints)\n",
+    "contours = sorted(contours, key=cv2.contourArea, reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "89578b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location = None\n",
+    "for contour in contours:\n",
+    "    approx = cv2.approxPolyDP(contour, 10, True)\n",
+    "    if len(approx) == 4:\n",
+    "        location = approx\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f3490897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[699, 492]],\n",
+       "\n",
+       "       [[698, 511]],\n",
+       "\n",
+       "       [[715, 511]],\n",
+       "\n",
+       "       [[717, 493]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "location"
    ]
   }
  ],
